[package]
name = "arraytools"
version = "0.1.2"
edition = "2018"

license = "MIT/Apache-2.0"
repository = "https://github.com/scottmcm/arraytools"
documentation = "https://docs.rs/arraytools/"
authors = ["scottmcm"]
description = "An extension trait for working with arrays."
keywords = ["array", "no_std"]
categories = ["no-std", "rust-patterns"]

[dependencies]
